{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 491,
  "lineage": "d2a130c8-b123-e64d-956d-2fb1a42f6947",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:245273408585:internet-gateway/igw-0d949b3f1cc2606e7",
            "id": "igw-0d949b3f1cc2606e7",
            "owner_id": "245273408585",
            "tags": {
              "Name": "devops-strapi-igw"
            },
            "tags_all": {
              "Name": "devops-strapi-igw"
            },
            "vpc_id": "vpc-0ddd758bd922f9abe"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:245273408585:route-table/rtb-0350e3bb3327ca757",
            "id": "rtb-0350e3bb3327ca757",
            "owner_id": "245273408585",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d949b3f1cc2606e7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-strapi-public-rt"
            },
            "tags_all": {
              "Name": "devops-strapi-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ddd758bd922f9abe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d86ed01c2887dfc",
            "route_table_id": "rtb-0350e3bb3327ca757",
            "subnet_id": "subnet-05f2b84dad7b3cf45"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09aafe15cf0bb9d62",
            "route_table_id": "rtb-0350e3bb3327ca757",
            "subnet_id": "subnet-000b6346143e9b322"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:245273408585:security-group/sg-079b847b274c5f53c",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-079b847b274c5f53c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "devops-strapi-alb-sg",
            "name_prefix": "",
            "owner_id": "245273408585",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-strapi-alb-sg"
            },
            "tags_all": {
              "Name": "devops-strapi-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ddd758bd922f9abe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:245273408585:security-group/sg-0bc07166b7ef2ea69",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bc07166b7ef2ea69",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 1337,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-079b847b274c5f53c"
                ],
                "self": false,
                "to_port": 1337
              }
            ],
            "name": "devops-strapi-ecs-sg",
            "name_prefix": "",
            "owner_id": "245273408585",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-strapi-ecs-sg"
            },
            "tags_all": {
              "Name": "devops-strapi-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ddd758bd922f9abe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoint_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:245273408585:security-group/sg-0e514eccb6814b66d",
            "description": "Security group for VPC endpoints",
            "egress": [],
            "id": "sg-0e514eccb6814b66d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "devops-strapi-vpc-endpoint-sg",
            "name_prefix": "",
            "owner_id": "245273408585",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-strapi-vpc-endpoint-sg"
            },
            "tags_all": {
              "Name": "devops-strapi-vpc-endpoint-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ddd758bd922f9abe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:245273408585:subnet/subnet-05f2b84dad7b3cf45",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f2b84dad7b3cf45",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "245273408585",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-strapi-public-1"
            },
            "tags_all": {
              "Name": "devops-strapi-public-1"
            },
            "vpc_id": "vpc-0ddd758bd922f9abe"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:245273408585:subnet/subnet-000b6346143e9b322",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-000b6346143e9b322",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "245273408585",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-strapi-public-2"
            },
            "tags_all": {
              "Name": "devops-strapi-public-2"
            },
            "vpc_id": "vpc-0ddd758bd922f9abe"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:245273408585:vpc/vpc-0ddd758bd922f9abe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0458957f9afe2c060",
            "default_route_table_id": "rtb-00db71d7ad10fb3e3",
            "default_security_group_id": "sg-0b0de83dd0687b2af",
            "dhcp_options_id": "dopt-0ec611b897925848d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ddd758bd922f9abe",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00db71d7ad10fb3e3",
            "owner_id": "245273408585",
            "tags": {
              "Name": "devops-strapi-vpc"
            },
            "tags_all": {
              "Name": "devops-strapi-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:245273408585:vpc-endpoint/vpce-0a4cf94c1b6cc1d64",
            "dns_entry": [
              {
                "dns_name": "vpce-0a4cf94c1b6cc1d64-z71cb434.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0a4cf94c1b6cc1d64-z71cb434-us-east-1a.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0a4cf94c1b6cc1d64-z71cb434-us-east-1b.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "api.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z09286292ZMN81DAZQZRU"
              },
              {
                "dns_name": "ecr.us-east-1.api.aws",
                "hosted_zone_id": "Z01897561UT28B48V6L4J"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0a4cf94c1b6cc1d64",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-05688066b15aae5c8",
              "eni-0812232c374bc5f28"
            ],
            "owner_id": "245273408585",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0e514eccb6814b66d"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.api",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.228",
                "subnet_id": "subnet-05f2b84dad7b3cf45"
              },
              {
                "ipv4": "10.0.2.174",
                "subnet_id": "subnet-000b6346143e9b322"
              }
            ],
            "subnet_ids": [
              "subnet-000b6346143e9b322",
              "subnet-05f2b84dad7b3cf45"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ddd758bd922f9abe"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoint_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:245273408585:vpc-endpoint/vpce-0fd29adeef0708762",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "id": "vpce-0fd29adeef0708762",
            "owner_id": "245273408585",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0350e3bb3327ca757"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0ddd758bd922f9abe"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:245273408585:vpc-endpoint/vpce-0b9e90d33961e18c5",
            "dns_entry": [
              {
                "dns_name": "vpce-0b9e90d33961e18c5-thysqg5u.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0b9e90d33961e18c5-thysqg5u-us-east-1a.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0b9e90d33961e18c5-thysqg5u-us-east-1b.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssm.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0571900ISTTA7QXR6TS"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0b9e90d33961e18c5",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-02360340e2f3ecea2",
              "eni-0904c3dabac1fd86a"
            ],
            "owner_id": "245273408585",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0e514eccb6814b66d"
            ],
            "service_name": "com.amazonaws.us-east-1.ssm",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.111",
                "subnet_id": "subnet-05f2b84dad7b3cf45"
              },
              {
                "ipv4": "10.0.2.75",
                "subnet_id": "subnet-000b6346143e9b322"
              }
            ],
            "subnet_ids": [
              "subnet-000b6346143e9b322",
              "subnet-05f2b84dad7b3cf45"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ddd758bd922f9abe"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoint_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    }
  ]
}